--- a/operators/notebooks/exploratory_analysis.ipynb
+++ b/operators/notebooks/exploratory_analysis.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis Exploratorio de Datos: Ubuntu-Packages"
+    "# Exploratory Analysis: Ubuntu-Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(\"datawarehouse/processed-ubuntu-packages.csv\")\n",
+    "df = pd.read_csv(\"../datawarehouse/processed-ubuntu-packages.csv\")\n",
     "\n",
     "# replace value Null to NaN\n",
     "df = df.replace(\"Null\", np.nan)"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -249,12 +249,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "24b4a5161a7dbc0ca27ec4b8da98573896bbc73acee81e4a10592b94f9185a1a"
+    "hash": "971b0a2461fa6366bef3d0a0f6b059f46377dd8de44467863864d714310d4964"
    }
   }
  },
