Test3 in review and preprocessed changes on the another viz and tests

--- a/operators/notebooks/visualizations/viz-4.ipynb
+++ b/operators/notebooks/visualizations/viz-4.ipynb
@@ -280,11 +280,11 @@
     }
    ],
    "source": [
-    "# replace value Null to NaN\n",
-    "df = df.replace(\"Null\", np.nan)\n",
+    "# Seleccionar las columnas de interés\n",
+    "cols = ['Distro-Version', 'Size', 'Installed-Size']\n",
     "\n",
-    "# print head of dataframe\n",
-    "df.head()"
+    "# Crear un nuevo dataframe con solo las columnas seleccionadas\n",
+    "df_selected = df[cols]"
    ]
   },
   {
@@ -335,12 +335,6 @@
    ],
    "source": [
     "# Cálculo de la correlación. obtener un valor numérico que indica la fuerza y dirección de la relación entre las variables\n",
-    "\n",
-    "# Seleccionar las columnas de interés\n",
-    "cols = ['Distro-Version', 'Size', 'Installed-Size']\n",
-    "\n",
-    "# Crear un nuevo dataframe con solo las columnas seleccionadas\n",
-    "df_selected = df[cols]\n",
     "\n",
     "# Calcular la matriz de correlación\n",
     "corr_matrix = df_selected.corr()\n",
@@ -504,12 +498,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5dc8b4e25d3d97065a02c3338f3242e8235f54a2cf78964a2ea20743c210654d"
+    "hash": "0f07422c8c9e1a5686c084496b2f8305ae3e8042acf2136c1600afab83cd5077"
    }
   }
  },
