--- a/operators/notebooks/visualizations/viz-6.ipynb
+++ b/operators/notebooks/visualizations/viz-6.ipynb
@@ -281,11 +281,12 @@
     }
    ],
    "source": [
-    "# replace value Null to NaN\n",
-    "df = df.replace(\"Null\", np.nan)\n",
+    "# Seleccionar las columnas relevantes y filtrar las filas que tienen \"Priority\" como \"unknown\"\n",
+    "df = df[[\"Distro-Version\", \"Version\", \"Package\", \"Priority\"]]\n",
+    "df = df[df[\"Priority\"] != \"unknown\"]\n",
     "\n",
-    "# print head of dataframe\n",
-    "df.head()"
+    "# Ordenar las filas por versión y prioridad\n",
+    "df = df.sort_values(by=[\"Distro-Version\", \"Priority\"], ascending=[True, False])"
    ]
   },
   {
@@ -313,13 +314,6 @@
     }
    ],
    "source": [
-    "# Seleccionar las columnas relevantes y filtrar las filas que tienen \"Priority\" como \"unknown\"\n",
-    "df = df[[\"Distro-Version\", \"Version\", \"Package\", \"Priority\"]]\n",
-    "df = df[df[\"Priority\"] != \"unknown\"]\n",
-    "\n",
-    "# Ordenar las filas por versión y prioridad\n",
-    "df = df.sort_values(by=[\"Distro-Version\", \"Priority\"], ascending=[True, False])\n",
-    "\n",
     "# Crear un diccionario de colores para cada prioridad\n",
     "color_dict = {\"required\": \"#1f77b4\", \"important\": \"#ff7f0e\", \"standard\": \"#2ca02c\",\n",
     "              \"optional\": \"#d62728\", \"extra\": \"#9467bd\"}\n",
@@ -377,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
