--- a/operators/notebooks/tests/test-1.ipynb
+++ b/operators/notebooks/tests/test-1.ipynb
@@ -308,9 +308,6 @@
     }
    ],
    "source": [
-    "# replace value Null to NaN\n",
-    "df = df.replace(\"Null\", np.nan)\n",
-    "\n",
     "# only get where priority is important or required\n",
     "df = df[df['Priority'].isin(['important', 'required'])]\n",
     "\n",
@@ -467,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
