feat: add review

--- a/operators/notebooks/tests/test-4.ipynb
+++ b/operators/notebooks/tests/test-4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from scipy import stats\n",
     "import statsmodels.api as sm\n",
-    "\n",
+    "from scipy.stats import pearsonr\n",
     "from IPython.display import display, Markdown"
    ]
   },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4          [passwd,  debconf (>= 0.5) | debconf-2.0]            2  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlación entre Num_Depends y Architecture:  -0.11829892015323715\n",
+      "Correlación entre Num_Depends y Architecture:  -0.11829892015319748\n",
       "Valor p para la correlación entre Num_Depends y Architecture:  0.0\n"
      ]
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
